# pixel3D

./: CMakeLists.txt  README.md  a.out  give_me_exec.sh  log  main.cpp
include/: application3D.cpp  application3D.h  meshTools.h  meta.cpp
include/A0/: pixel.h
include/A1/: application3D.cpp  application3D.h  meshTools.h  meta.h
include/utilities/: background_generators.h
